@@ -1,0 +1,10 @@
+Trace: &exit('assertion failed') - FAILED! at assert.sl:10
+Warning: assertion failed at assert.sl:10
+Trace: &fact(-1) - FAILED! at assert.sl:11
+Trace: &fact(0) - FAILED! at assert.sl:11
+Trace: &fact(1) - FAILED! at assert.sl:11
+Trace: &fact(2) - FAILED! at assert.sl:11
+Trace: &fact(3) - FAILED! at assert.sl:11
+Trace: &fact(4) - FAILED! at assert.sl:11
+Trace: &fact(5) - FAILED! at assert.sl:11
+Trace: &fact(6) - FAILED! at assert.sl:14
